[+]Update team layout & fix info

--- a/approach/index.html
+++ b/approach/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/approach/">
 
-    <title> | IVPG | Peking University</title>
+    <title> | IVP | Peking University</title>
 
 </head>
 
