--- a/joinus/index.html
+++ b/joinus/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/joinus/">
 
-    <title>Join Us | IVPG | Peking University</title>
+    <title>Join Us | IVP | Peking University</title>
 
 </head>
 
