--- a/publication/bi-level-optimization/index.html
+++ b/publication/bi-level-optimization/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/bi-level-optimization/">
 
-    <title>Bi-level Optimization of Block Compressive Sensing with Perceptually Nonlocal Similarity | IVPG | Peking University</title>
+    <title>Bi-level Optimization of Block Compressive Sensing with Perceptually Nonlocal Similarity | IVP | Peking University</title>
 
 </head>
 
