--- a/publication/blind-image-quality-measurement/index.html
+++ b/publication/blind-image-quality-measurement/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/blind-image-quality-measurement/">
 
-    <title>Blind Image Quality Measurement by Exploiting High Order Statistics with Deep Dictionary Encoding Network | IVPG | Peking University</title>
+    <title>Blind Image Quality Measurement by Exploiting High Order Statistics with Deep Dictionary Encoding Network | IVP | Peking University</title>
 
 </head>
 
