--- a/publication/complexity-reduction-in-multi-dictionary/index.html
+++ b/publication/complexity-reduction-in-multi-dictionary/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/complexity-reduction-in-multi-dictionary/">
 
-    <title>Complexity Reduction in Multi-dictionary Based Single-Image Superresolution Reconstruction via Phase Congruency | IVPG | Peking University</title>
+    <title>Complexity Reduction in Multi-dictionary Based Single-Image Superresolution Reconstruction via Phase Congruency | IVP | Peking University</title>
 
 </head>
 
