--- a/publication/dct-coefficient-distribution/index.html
+++ b/publication/dct-coefficient-distribution/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/dct-coefficient-distribution/">
 
-    <title>DCT Coefficient Distribution Modeling and Quality Dependency Analysis Based Frame-Level Bit Allocation for HEVC | IVPG | Peking University</title>
+    <title>DCT Coefficient Distribution Modeling and Quality Dependency Analysis Based Frame-Level Bit Allocation for HEVC | IVP | Peking University</title>
 
 </head>
 
