--- a/publication/generalized-relevance-vector-machine/index.html
+++ b/publication/generalized-relevance-vector-machine/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/generalized-relevance-vector-machine/">
 
-    <title>Generalized Relevance Vector Machine | IVPG | Peking University</title>
+    <title>Generalized Relevance Vector Machine | IVP | Peking University</title>
 
 </head>
 
