--- a/publication/low-cost-memory/index.html
+++ b/publication/low-cost-memory/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/low-cost-memory/">
 
-    <title>Low-cost Memory Data Scheduling Method for Reconfigurable FFT Bit-reversal Circuits | IVPG | Peking University</title>
+    <title>Low-cost Memory Data Scheduling Method for Reconfigurable FFT Bit-reversal Circuits | IVP | Peking University</title>
 
 </head>
 
