--- a/publication/low-rate-image-compression/index.html
+++ b/publication/low-rate-image-compression/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/low-rate-image-compression/">
 
-    <title>Low-rate Image Compression with Super-Resolution Learning | IVPG | Peking University</title>
+    <title>Low-rate Image Compression with Super-Resolution Learning | IVP | Peking University</title>
 
 </head>
 
