--- a/publication/multi-objective-optimization-perspective/index.html
+++ b/publication/multi-objective-optimization-perspective/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/multi-objective-optimization-perspective/">
 
-    <title>A Multi-Objective Optimization Perspective for Joint Consideration of Video Coding Quality | IVPG | Peking University</title>
+    <title>A Multi-Objective Optimization Perspective for Joint Consideration of Video Coding Quality | IVP | Peking University</title>
 
 </head>
 
