--- a/publication/phase-congruency-based-patch-evaluator/index.html
+++ b/publication/phase-congruency-based-patch-evaluator/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/phase-congruency-based-patch-evaluator/">
 
-    <title>A Phase Congruency Based Patch Evaluator for Complexity Reduction in Multi-dictionary Based Single-image Superresolution | IVPG | Peking University</title>
+    <title>A Phase Congruency Based Patch Evaluator for Complexity Reduction in Multi-dictionary Based Single-image Superresolution | IVP | Peking University</title>
 
 </head>
 
