--- a/publication/smooth-view-quality-oriented/index.html
+++ b/publication/smooth-view-quality-oriented/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/smooth-view-quality-oriented/">
 
-    <title>Smooth View Quality Oriented Bit Allocation Optimization for 3D Video Coding | IVPG | Peking University</title>
+    <title>Smooth View Quality Oriented Bit Allocation Optimization for 3D Video Coding | IVP | Peking University</title>
 
 </head>
 
