--- a/publication/ssim-based-global-optimization/index.html
+++ b/publication/ssim-based-global-optimization/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/ssim-based-global-optimization/">
 
-    <title>SSIM-Based Global Optimization for CTU-Level Rate Control in HEVC | IVPG | Peking University</title>
+    <title>SSIM-Based Global Optimization for CTU-Level Rate Control in HEVC | IVP | Peking University</title>
 
 </head>
 
