--- a/publication/unified-no-reference-quality-assessment/index.html
+++ b/publication/unified-no-reference-quality-assessment/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/unified-no-reference-quality-assessment/">
 
-    <title>Unified No-reference Quality Assessment of Singly and Multiply Distorted Stereoscopic Images | IVPG | Peking University</title>
+    <title>Unified No-reference Quality Assessment of Singly and Multiply Distorted Stereoscopic Images | IVP | Peking University</title>
 
 </head>
 
