--- a/about/index.html
+++ b/about/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/about/">
 
-    <title>About | IVPG | Peking University</title>
+    <title>About | IVP | Peking University</title>
 
 </head>
 
