--- a/codes/index.html
+++ b/codes/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/codes/">
 
-    <title>Codes | IVPG | Peking University</title>
+    <title>Codes | IVP | Peking University</title>
 
 </head>
 
