--- a/datasets/index.html
+++ b/datasets/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/datasets/">
 
-    <title>Datasets | IVPG | Peking University</title>
+    <title>Datasets | IVP | Peking University</title>
 
 </head>
 
