--- a/member/index.html
+++ b/member/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/member/">
 
-    <title>Members | IVPG | Peking University</title>
+    <title>Members | IVP | Peking University</title>
 
 </head>
 
