--- a/publication/data-driven-rate-control/index.html
+++ b/publication/data-driven-rate-control/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/data-driven-rate-control/">
 
-    <title>Data-Driven Rate Control for Rate-Distortion Optimization in HEVC Based on Simplified Effective Initial QP Learning | IVPG | Peking University</title>
+    <title>Data-Driven Rate Control for Rate-Distortion Optimization in HEVC Based on Simplified Effective Initial QP Learning | IVP | Peking University</title>
 
 </head>
 
