--- a/publication/index.html
+++ b/publication/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/">
 
-    <title>Publications | IVPG | Peking University</title>
+    <title>Publications | IVP | Peking University</title>
 
 </head>
 
