--- a/publication/joint-machine-learning/index.html
+++ b/publication/joint-machine-learning/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/joint-machine-learning/">
 
-    <title>Joint Machine Learning and Game Theory for Rate Control in High Efficiency Video Coding | IVPG | Peking University</title>
+    <title>Joint Machine Learning and Game Theory for Rate Control in High Efficiency Video Coding | IVP | Peking University</title>
 
 </head>
 
