--- a/publication/mmnet/index.html
+++ b/publication/mmnet/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/mmnet/">
 
-    <title>MMNet: Multi-Stage and Multi-Scale Fusion Network for RGB-D Salient Object Detection | IVPG | Peking University</title>
+    <title>MMNet: Multi-Stage and Multi-Scale Fusion Network for RGB-D Salient Object Detection | IVP | Peking University</title>
 
 </head>
 
