--- a/publication/multiscale-phase-congruency-analysis/index.html
+++ b/publication/multiscale-phase-congruency-analysis/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/multiscale-phase-congruency-analysis/">
 
-    <title>Multiscale Phase Congruency Analysis for Image Edge Visual Saliency Detection | IVPG | Peking University</title>
+    <title>Multiscale Phase Congruency Analysis for Image Edge Visual Saliency Detection | IVP | Peking University</title>
 
 </head>
 
