--- a/publication/nonnegative-matrix-factorization/index.html
+++ b/publication/nonnegative-matrix-factorization/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/nonnegative-matrix-factorization/">
 
-    <title>Nonnegative Matrix Factorization with Mixed Hypergraph Regularization for Community Detection | IVPG | Peking University</title>
+    <title>Nonnegative Matrix Factorization with Mixed Hypergraph Regularization for Community Detection | IVP | Peking University</title>
 
 </head>
 
