--- a/publication/phase-congruency-analysis/index.html
+++ b/publication/phase-congruency-analysis/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/phase-congruency-analysis/">
 
-    <title>Phase Congruency Analysis of Down-sampled and Blurring Images for Foreground Extraction | IVPG | Peking University</title>
+    <title>Phase Congruency Analysis of Down-sampled and Blurring Images for Foreground Extraction | IVP | Peking University</title>
 
 </head>
 
