--- a/publication/phase-congruency-based-edge-saliency-detection/index.html
+++ b/publication/phase-congruency-based-edge-saliency-detection/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/phase-congruency-based-edge-saliency-detection/">
 
-    <title>Phase Congruency Based Edge Saliency Detection and Rate Control for Perceptual Image and Video Coding | IVPG | Peking University</title>
+    <title>Phase Congruency Based Edge Saliency Detection and Rate Control for Perceptual Image and Video Coding | IVP | Peking University</title>
 
 </head>
 
