--- a/publication/rate-distortion-optimized-inter-view/index.html
+++ b/publication/rate-distortion-optimized-inter-view/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/rate-distortion-optimized-inter-view/">
 
-    <title>Rate Distortion Optimized Inter View Frame Level Bit Allocation Method for MV-HEVC | IVPG | Peking University</title>
+    <title>Rate Distortion Optimized Inter View Frame Level Bit Allocation Method for MV-HEVC | IVP | Peking University</title>
 
 </head>
 
