--- a/publication/risk-aware-airwise-rank-learning/index.html
+++ b/publication/risk-aware-airwise-rank-learning/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/risk-aware-airwise-rank-learning/">
 
-    <title>A Risk-Aware Pairwise Rank Learning Approach for Visual Discomfort Prediction of Stereoscopic 3D Images | IVPG | Peking University</title>
+    <title>A Risk-Aware Pairwise Rank Learning Approach for Visual Discomfort Prediction of Stereoscopic 3D Images | IVP | Peking University</title>
 
 </head>
 
