--- a/publication/ssim-based-game-theory/index.html
+++ b/publication/ssim-based-game-theory/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/publication/ssim-based-game-theory/">
 
-    <title>SSIM-Based Game Theory Approach for Rate-Distortion Optimized Intra Frame CTU-Level Bit Allocation | IVPG | Peking University</title>
+    <title>SSIM-Based Game Theory Approach for Rate-Distortion Optimized Intra Frame CTU-Level Bit Allocation | IVP | Peking University</title>
 
 </head>
 
