--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         <div class="justify-content-center inner-row">
                 <div class="text-row col-xs-12 col-md-4 section-heading">
-                    <h2 class="section-heading">Faculties</h2>
+                    <h2 class="section-heading">Faculty</h2>
                 </div>
         
             
