--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 
 
                 <div class="text-row col-xs-12 col-md-4 section-heading">
-                    <h2 class="section-heading">Phd Students</h2>
+                    <h2 class="section-heading">PhD Students</h2>
                 </div>
 
                 
