--- a/member/gaowei/index.html
+++ b/member/gaowei/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/member/gaowei/">
 
-    <title>Wei Gao, Assistant Professor | IVP | Peking University</title>
+    <title>Wei Gao (高伟), Assistant Professor | IVP | Peking University</title>
 
 </head>
 
