--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="portrait" itemprop="image" style="background-image: url('https://pku-ivp.github.io//img//portraits/gaowei.jpg');"></div>
         </a>
         <div class="portrait-title">
-            <h2 itemprop="name"><a href="https://pku-ivp.github.io/member/gaowei/">Wei Gao</a></h2>
+            <h2 itemprop="name"><a href="https://pku-ivp.github.io/member/gaowei/">Wei Gao (高伟)</a></h2>
             
                 <h4>Assistant Professor, Peking University</h4>
             
