--- a/member/gaowei/index.html
+++ b/member/gaowei/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" href="https://pku-ivp.github.io//img/favicon.png" type="image/x-icon">
     <link rel="canonical" href="https://pku-ivp.github.io/member/gaowei/">
 
-    <title>Wei Gao (高伟), Assistant Professor | IVP | Peking University</title>
+    <title>Wei Gao, Assistant Professor | IVP | Peking University</title>
 
 </head>
 
@@ -131,7 +131,7 @@
             <div class="portrait" itemprop="image" style="background-image: url('https://pku-ivp.github.io//img//portraits/gaowei.jpg');"></div>
 
             <div class="portrait-title">
-                <h2 itemprop="name">Wei Gao</h2>
+                <h2 itemprop="name">Wei Gao (高伟)</h2>
                 
                 
                     <h4>Assistant Professor, Peking University</h4>
