--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="portrait-title">
             <h2 itemprop="name"><a href="https://pku-ivp.github.io/member/gaowei/">Wei Gao (高伟)</a></h2>
             
-                <h4>Assistant Professor, PhD Supervisor (副研究员), Peking University</h4>
+                <h4>Assistant Professor, Ph.D. Supervisor (副研究员), Peking University</h4>
             
         </div>
     </div>
