[+]Update new change by editing source

--- a/about/index.html
+++ b/about/index.html
@@ -135,6 +135,7 @@
 <p>Deep Neural Network Design and Architecture Optimization, Machine Learning and Optimization Theory</p>
 <h3 id="intelligent-systems">Intelligent Systems</h3>
 <p>Multimedia and AI Accelerators, VLSI Architectures for ASIC/SoC/FPGA Design, HW/SW Co-design</p>
+<p><img src="https://pku-ivp.github.io/img/full_logo_new.png" alt="logo"></p>
 
 </div>
 
