[+]Add ClustrMaps widget

--- a/index.html
+++ b/index.html
@@ -1693,6 +1693,9 @@
 
             </div>
         </div>
+        <div class="row" style="margin: auto; width: 116px; height: 116px; display: block;">
+            <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=SotmIz5pkSarUDYb3ZbiLIjKES-InJx20hOJ8JY0CB0"></script>
+        </div>
     </div>
     
 
@@ -1701,6 +1704,7 @@
 
 <footer class="site-footer">
     <div class="container">
+
         <p class="powered-by">
 
             © Intelligent Video &amp; Perception Group, Peking University, 2020 &middot; 
