[.]Edit lab name

--- a/about/index.html
+++ b/about/index.html
@@ -138,7 +138,7 @@
 
 <div class="container">
     <h1 id="about-ivp">About IVP</h1>
-<p>We are the <strong>Immersive Video &amp; Perception Group</strong>, from  <a href="http://www.ece.pku.edu.cn/">the School of Electronic and Computer Engineering</a>, <a href="http://www.pku.edu.cn/">Peking University</a>, Shenzhen, China.</p>
+<p>We are the <strong>Immersive Video Perception Group</strong>, from  <a href="http://www.ece.pku.edu.cn/">the School of Electronic and Computer Engineering</a>, <a href="http://www.pku.edu.cn/">Peking University</a>, Shenzhen, China.</p>
 <p>We are focusing on the research topics of <strong>Compression, Processing and Analysis for Immersive Media (Point Cloud/Light Field/Panorama/3D)</strong>, and <strong>Related Machine Learning &amp; Deep Learning &amp; Optimization Methods (From Theory to Practice)</strong>.</p>
 <h3 id="intelligent-imagevideo-coding">Intelligent Image/Video Coding</h3>
 <p>2D/3D/Intelligent/Perceptual Image/Video Coding Optimization, Immersive Media and Virtual Reality (Panorama/Light Field/Point Cloud), Multimedia Streaming and Communication</p>
@@ -155,7 +155,7 @@
 
         <p class="powered-by">
 
-            © Immersive Video &amp; Perception Group, Peking University, 2020 &middot; 
+            © Immersive Video Perception Group, Peking University, 2020 &middot; 
 
             Partially powered by the <a href="https://github.com/biaslab/hugo-academic-group" target="_blank">Academic group theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
 
