--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="header-content-inner">
             <h1>
                 
-                Immersive Video & Perception Group
+                Immersive Video Perception Group
             </h1>
             
             <p class="slogan-text">
@@ -1707,7 +1707,7 @@
 
         <p class="powered-by">
 
-            © Immersive Video &amp; Perception Group, Peking University, 2020 &middot; 
+            © Immersive Video Perception Group, Peking University, 2020 &middot; 
 
             Partially powered by the <a href="https://github.com/biaslab/hugo-academic-group" target="_blank">Academic group theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
 
