--- a/member/yuanhang/index.html
+++ b/member/yuanhang/index.html
@@ -238,7 +238,7 @@
 
         <p class="powered-by">
 
-            © Immersive Video &amp; Perception Group, Peking University, 2020 &middot; 
+            © Immersive Video Perception Group, Peking University, 2020 &middot; 
 
             Partially powered by the <a href="https://github.com/biaslab/hugo-academic-group" target="_blank">Academic group theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
 
