--- a/about/index.html
+++ b/about/index.html
@@ -139,9 +139,9 @@
 <div class="container">
     <h1 id="about-ivp">About IVP</h1>
 <p>We are the <strong>Immersive Video Perception Group</strong>, from  <a href="http://www.ece.pku.edu.cn/">the School of Electronic and Computer Engineering</a>, <a href="http://www.pku.edu.cn/">Peking University</a>, Shenzhen, China.</p>
-<p>We are focusing on the research topics of <strong>Compression, Processing and Analysis for Immersive Media (Point Cloud/Light Field/Panorama/3D)</strong>, and <strong>Related Machine Learning &amp; Deep Learning &amp; Optimization Methods (From Theory to Practice)</strong>.</p>
+<p>We are focusing on the research topics of <strong>Perception, Compression, Processing and Analysis for Immersive Media (Point Cloud/Light Field/Panorama/3D)</strong>, and <strong>Related Machine Learning &amp; Deep Learning &amp; Optimization Methods (From Theory to Practice)</strong>.</p>
 <h3 id="intelligent-imagevideo-coding">Intelligent Image/Video Coding</h3>
-<p>2D/3D/Intelligent/Perceptual Image/Video Coding Optimization, Immersive Media and Virtual Reality (Panorama/Light Field/Point Cloud), Multimedia Streaming and Communication</p>
+<p>2D/3D/Intelligent/Perceptual Image/Video Coding Optimization, Immersive Media and Virtual Reality (Point Cloud/Light Field/Panorama/3D), Multimedia Streaming and Communication</p>
 <h3 id="imagevideo-processing--computer-vision">Image/Video Processing &amp; Computer Vision</h3>
 <p>Image/Video Restoration, Salient Object Detection, Visual Perception Models, Classification and Segmentation for 2D/3D/Immersive Visual Media</p>
 <h3 id="machine-learning--deep-learning--optimization--intelligent-systems">Machine Learning &amp; Deep Learning &amp; Optimization &amp; Intelligent Systems</h3>
