--- a/about/index.html
+++ b/about/index.html
@@ -144,7 +144,7 @@
 <p>2D/3D/Intelligent/Perceptual Image/Video Coding Optimization, Immersive Media and Virtual Reality (Point Cloud/Light Field/Panorama/3D), Multimedia Streaming and Communication</p>
 <h3 id="imagevideo-processing--computer-vision">Image/Video Processing &amp; Computer Vision &amp; Visual Perception</h3>
 <p>Image/Video Restoration, Salient Object Detection, Visual Perception Models and Quality of Experience (QoE), Segmentation and Classification for 2D/3D/Immersive Visual Media</p>
-<h3 id="machine-learning--deep-learning--optimization--intelligent-systems">Machine Learning &amp; Deep Learning &amp; Optimization &amp; Intelligent Systems</h3>
+<h3 id="machine-learning--deep-learning--optimization--intelligent-systems">Machine Learning &amp; Deep Learning &amp; Optimization Theory &amp; Intelligent Systems</h3>
 <p>Deep Neural Network Design and Architecture Optimization, Machine Learning and Optimization Methods, Multimedia and AI Accelerators, VLSI Architectures for ASIC/SoC/FPGA Design, HW/SW Co-design</p>
 <p><img src="https://pku-ivp.github.io/img/full_logo_new.png" alt="logo"></p>
 
